# svc-mgr

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/: svc-mgr.md
.claude/skills/renv/: README.md
.claude/skills/rtui/: README.md
.claude/skills/rust-cross-compile/: SKILL.md
.claude/skills/svc-mgr/: SKILL.md
.claude/skills/svc-mgr/references/: api.md  cli-and-platforms.md
.github/workflows/: rust.yml
docs/plans/: 2026-03-06-service-api-hardening-design.md  2026-03-06-service-api-hardening.md
examples/: basic_usage.rs
src/: action.rs  builder.rs  error.rs  kind.rs  label.rs  lib.rs  main.rs  typed.rs  utils.rs
src/env/: mod.rs  unix.rs  windows.rs
src/platform/: mod.rs
src/platform/launchd/: mod.rs  plist.rs
src/platform/openrc/: mod.rs  script.rs
src/platform/rcd/: mod.rs  script.rs
src/platform/sc/: config.rs  mod.rs  shell_escape.rs
src/platform/systemd/: mod.rs  unit.rs
src/platform/winsw/: mod.rs  xml_def.rs
src/tui/: app.rs  env.rs  events.rs  menu.rs  mod.rs  service.rs  ui.rs
tests/: api_hardening_tests.rs  builder_tests.rs  label_tests.rs  platform_tests.rs
