[package]
name = "svc-mgr"
version = "0.1.0"
edition = "2021"
description = "Cross-platform service management library"
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1"
dirs = "6"
log = "0.4"
thiserror = "2"
which = "7"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(target_os = "windows")'.dependencies]
quick-xml = "0.37"

[[bin]]
name = "svc"
path = "src/main.rs"
