[package]
name = "svc-mgr"
version = "0.1.1"
edition = "2024"
description = "Cross-platform service management library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Caisin/svc-mgr"
homepage = "https://github.com/Caisin/svc-mgr"
keywords = ["service", "daemon", "launchd", "systemd", "cross-platform"]
categories = ["os", "config"]

[features]
default = []
cli = ["dep:clap", "dep:env_logger"]
tui = ["cli", "dep:ratatui", "dep:crossterm"]

[dependencies]
cfg-if = "1"
dirs = "6"
log = "0.4"
thiserror = "2"
which = "8"
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(target_os = "windows")'.dependencies]
quick-xml = "0.39"
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }

[[bin]]
name = "rsvc"
path = "src/bin/rsvc.rs"
required-features = ["cli"]

[[bin]]
name = "renv"
path = "src/bin/renv.rs"
required-features = ["cli"]

[[bin]]
name = "rtui"
path = "src/bin/rtui.rs"
required-features = ["tui"]
